# gp3

./: CMakeLists.txt  README.md  package.xml
include/gp3/: gaussian_process.h  gp3.h  imu_predictor.h  transform_predictor.h
launch/: msf_dataset.launch
src/: gaussian_process.cpp  gp3.cpp  gp3_node.cpp  imu_predictor.cpp  transform_predictor.cpp
