<?xml version="1.0"?>
<package format="2">
  <name>gp3</name>
  <version>0.0.0</version>
  <description>pose upsampling through baseless guessing</description>

  <author email="ztaylor@ethz.ch">Zachary Taylor</author>

  <maintainer email="ztaylor@ethz.ch">Zachary Taylor</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>   
  <depend>minkindr</depend>
</package>
